# VulkanBoids

./: .gitignore  CMakeLists.txt  LICENSE  README
Models/torhouse_stone_circle_galloway_scotland/: license.txt  scene.gltf
Projects/: CmakeLists.txt
Projects/Games/: CmakeLists.txt
Projects/Games/LearningVulkan/: Cmakelists.txt
Projects/Games/LearningVulkan/Source/: main.cpp
Projects/Games/TestGame/: CmakeLists.txt
Projects/Games/TestGame/Source/: main.cpp
Projects/LearningVulkan/: Cmakelists.txt
Projects/LearningVulkan/Source/: main.cpp
Projects/TestGame/: CmakeLists.txt
Projects/TestGame/Source/: main.cpp
Source/Runtime/: CMakeLists.txt
Source/Runtime/Core/: CmakeLists.txt
Source/Runtime/Core/Private/: Scene.cpp
Source/Runtime/Core/Public/: ResourceManager.h  ResourceStructs.h  Scene.h  Utils.h
Source/Runtime/Engine/: CMakeLists.txt
Source/Runtime/Engine/Private/: Engine.cpp  main.cpp
Source/Runtime/Engine/Public/: Engine.h
Source/Runtime/Engine/VulkanBoids.dir/Debug/: VulkanBoids.exe.recipe
Source/Runtime/Engine/VulkanBoids.dir/Debug/VulkanBoids.tlog/: CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  Cl.items.tlog  CustomBuild.command.1.tlog  CustomBuild.read.1.tlog  CustomBuild.write.1.tlog  VulkanBoids.lastbuildstate  link.command.1.tlog  link.read.1.tlog  link.secondary.1.tlog  link.write.1.tlog
Source/Runtime/Graphics/: CMakeLists.txt  Swapchain.h
Source/Runtime/Graphics/Graphics.dir/Debug/Graphics.tlog/: CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  Cl.items.tlog  CustomBuild.command.1.tlog  CustomBuild.read.1.tlog  CustomBuild.write.1.tlog  Lib-link.read.1.tlog  Lib-link.write.1.tlog  Lib.command.1.tlog
Source/Runtime/Graphics/Private/: App.cpp  Commands.cpp  Device.cpp  Framebuffer.cpp  Graphics.cpp  GraphicsApp.cpp  Instance.cpp  Logging.cpp  Pipeline.cpp  QueueFamilies.cpp  Shaders.cpp  Swapchain.cpp  Sync.cpp
Source/Runtime/Graphics/Public/: App.h  Commands.h  Device.h  Frame.h  Framebuffer.h  Graphics.h  GraphicsApp.h  Instance.h  Logging.h  Pipeline.h  QueueFamilies.h  Shaders.h  Swapchain.h  Sync.h  Utils.h
Source/Runtime/Graphics/Shaders/: compileShaders.bat
Source/Runtime/Shaders/: compile.bat  screenShader.vert
